--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       <p><a href="./js- zoom-image-equal-ratios/index.html">js- zoom-image-equal-ratios</a></p>
       <p><a href="./js-drag-and-drop/index.html">js-drag-and-drop</a></p>
       <p><a href="./js-file/index.html">js-file</a></p>
+      <p><a href="./js-rand/index.html">JS 随机数生成算法</a></p>
       <p><a href="./js-router/index.html">js-router</a></p>
       <p><a href="./js-simulation-scroll-bar/index.html">js-simulation-scroll-bar</a></p>
       <p><a href="./js-tooltip/index.html">js-tooltip</a></p>
