--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Crogram Inc." />
-    <meta name="keywords" content="demo, JS, CSS, HTML, doudoudzj" />
+    <meta name="keywords" content="DEMO, HTML, JS, CSS, doudoudzj" />
     <meta name="author" content="doudoudzj(唐钰豆豆)" />
     <link rel="icon" href="favicon.ico" />
     <title>代码片段、示例代码</title>
@@ -56,13 +56,111 @@
         </nav>
     </div>
     <div class="container">
-        <p><a href="./canva/electsign/index.html">e-Sign</a></p>
-        <p><a href="./canva/round-clock/index.html">Round-Clock</a></p>
-        <p><a href="./css-table/index.html">CSS-Table</a></p>
-        <p><a href="./css-icon/icon-close.html">css-icon</a></p>
-        <p><a href="./css3-checkout-box-check-effect/index.html">css3-checkout-box-check-effect</a></p>
-        <p><a href="./css3-input-radio/index.html">css3-input-radio</a></p>
-        <p><a href="./css3-js-sonw/index.html">css3-js-sonw</a></p>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a href="#demo-css" role="button" data-toggle="collapse" aria-expanded="true" aria-controls="demo-css">CSS</a>
+                        </h4>
+                    </div>
+                    <div id="demo-css" class="panel-collapse collapse in">
+                        <div class="panel-body">
+                            <p><a href="./css/css-table/index.html">CSS 实现 Table 表格</a></p>
+                            <p><a href="./css/css-icon/icon-close.html">CSS 图标</a></p>
+                            <p><a href="./css/css3-checkout-box-check-effect/index.html">CSS3-checkout-box-check-effect</a></p>
+                            <p><a href="./css/css3-input-radio/index.html">CSS3-input-radio</a></p>
+                            <p><a href="./css/css-animation/animation-keyframes.html">CSS 动画</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a href="#demo-js" class="collapsed" role="button" data-toggle="collapse" aria-expanded="true" aria-controls="demo-js">JavaScript</a>
+                        </h4>
+                    </div>
+                    <div id="demo-js" class="panel-collapse collapse in">
+                        <div class="panel-body">
+                            <p><a href="./js-sonw/index.html">JS-下雪效果</a></p>
+                            <p><a href="./js- zoom-image-equal-ratios/index.html">js- zoom-image-equal-ratios</a></p>
+                            <p><a href="./js-drag-and-drop/index.html">js-drag-and-drop</a></p>
+                            <p><a href="./js-file/index.html">js-file</a></p>
+                            <p><a href="./js-rand/index.html">JS 随机数生成算法</a></p>
+                            <p><a href="./js-router/index.html">js-router</a></p>
+                            <p><a href="./js-simulation-scroll-bar/index.html">js-simulation-scroll-bar</a></p>
+                            <p><a href="./js-tooltip/index.html">js-tooltip</a></p>
+                            <p><a href="./javascript/9x9/index.html">原生JS随机颜色9x9乘法表</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a href="#demo-jquery" class="collapsed" role="button" data-toggle="collapse" aria-expanded="true" aria-controls="demo-jquery">JQuery</a>
+                        </h4>
+                    </div>
+                    <div id="demo-jquery" class="panel-collapse collapse in">
+                        <div class="panel-body">
+                            <p><a href="./jquery/lottery_3x3/index.html">jQuery 动态九宫格抽奖</a></p>
+                            <p><a href="./jquery/calc/index.html">jQuery 实现简单计算器</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a href="#demo-vuejs" class="collapsed" role="button" data-toggle="collapse" aria-expanded="true" aria-controls="demo-vuejs">VueJS</a>
+                        </h4>
+                    </div>
+                    <div id="demo-vuejs" class="panel-collapse collapse in">
+                        <div class="panel-body">
+                            <p><a href="./vuejs/hello-world.html">vuejs-hello-world</a></p>
+                            <p><a href="./vuejs/lottery/index.html">VueJS 实现九宫格抽奖</a></p>
+                            <!-- <p><a href="./vuejs/vue-auto-number/index.html">vue-auto-number</a></p> -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a href="#demo-canvas" class="collapsed" role="button" data-toggle="collapse" aria-expanded="true" aria-controls="demo-canvas">Canvas</a>
+                        </h4>
+                    </div>
+                    <div id="demo-canvas" class="panel-collapse collapse in">
+                        <div class="panel-body">
+                            <p><a href="./canvas/electsign/index.html">Canvas 电子签名</a></p>
+                            <p><a href="./canvas/round-clock/index.html">Canvas + VueJS 圆形时钟</a></p>
+                            <p><a href="./canvas/background-animation/index.html">Canvas 背景动画</a></p>
+                            <p><a href="./canvas/WebGL-high-performance-fireworks-blooming-animation/index.html">Canvas 烟花</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a href="#demo-others" class="collapsed" role="button" data-toggle="collapse" aria-expanded="true" aria-controls="demo-others">其他</a>
+                        </h4>
+                    </div>
+                    <div id="demo-others" class="panel-collapse collapse in">
+                        <div class="panel-body">
+                            <p><a href="./bootstrap/left+right.html">Bootstrap 左右两栏布局</a></p>
+                            <p><a href="./files/js-export-excel/index.html">JS导出表格为excel,word,PDF,CSV的模板</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <p><a href="./html-contenteditable/index.html">html-contenteditable</a></p>
         <p><a href="./html-iframe-event/index.html">html-iframe-event</a></p>
         <p><a href="./html-page-error/400.html">html-page-error-400</a></p>
@@ -73,18 +171,8 @@
         <p><a href="./HTML5 localStorage 页面数据同步demo/localStorage3.html">HTML5 localStorage 页面数据同步demo3</a></p>
         <p><a href="./iframe-js-injection/index.html">iframe-js-injection</a></p>
         <p><a href="./iframe-print/index.html">iframe-print</a></p>
-        <p><a href="./js- zoom-image-equal-ratios/index.html">js- zoom-image-equal-ratios</a></p>
-        <p><a href="./js-drag-and-drop/index.html">js-drag-and-drop</a></p>
-        <p><a href="./js-file/index.html">js-file</a></p>
-        <p><a href="./js-rand/index.html">JS 随机数生成算法</a></p>
-        <p><a href="./js-router/index.html">js-router</a></p>
-        <p><a href="./js-simulation-scroll-bar/index.html">js-simulation-scroll-bar</a></p>
-        <p><a href="./js-tooltip/index.html">js-tooltip</a></p>
         <p><a href="./test_scroll_on_safari/index.html">test_scroll_on_safari</a></p>
         <p><a href="./uiisc-html/index.html">uiisc-default-index</a></p>
-        <p><a href="./vuejs/hello-world.html">vuejs-hello-world</a></p>
-        <!-- <p><a href="./vuejs/vue-auto-number/index.html">vue-auto-number</a></p> -->
-        <p><a href="./WebGL-high-performance-fireworks-blooming-animation/index.html">WebGL-high-performance-fireworks-blooming-animation</a></p>
     </div>
     <footer class="footer">
         <div class="container">
