--- a/canvas/WebGL-high-performance-fireworks-blooming-animation/index.html
+++ b/canvas/WebGL-high-performance-fireworks-blooming-animation/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>HTML5/WebGL高性能烟花绽放动画</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0" />
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0" />
     <meta name="format-detection" content="telephone=no" />
     <style>
         canvas {
@@ -21,12 +22,12 @@
     <canvas id=c></canvas>
     <script>
         var gl = c.getContext('webgl', {
-            preserveDrawingBuffer: true
-        })
-            , w = c.width = window.innerWidth
-            , h = c.height = window.innerHeight
-            , webgl = {}
-            , opts = {
+                preserveDrawingBuffer: true
+            }),
+            w = c.width = window.innerWidth,
+            h = c.height = window.innerHeight,
+            webgl = {},
+            opts = {
                 projectileAlpha: .8,
                 projectileLineWidth: 1.3,
                 fireworkAngleSpan: .5,
@@ -110,16 +111,17 @@ void main(){
             gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(webgl.data), gl.STATIC_DRAW);
             gl.drawArrays(glType, 0, webgl.data.length / 4);
         }
-        var fireworks = []
-            , tick = 0
-            , sins = []
-            , coss = []
-            , maxShardsParFirework = opts.baseShardsParFirework + opts.addedShardsParFirework
-            , tau = 6.283185307179586476925286766559;
+        var fireworks = [],
+            tick = 0,
+            sins = [],
+            coss = [],
+            maxShardsParFirework = opts.baseShardsParFirework + opts.addedShardsParFirework,
+            tau = 6.283185307179586476925286766559;
         for (var i = 0; i < maxShardsParFirework; ++i) {
             sins[i] = Math.sin(tau * i / maxShardsParFirework);
             coss[i] = Math.cos(tau * i / maxShardsParFirework);
         }
+
         function Firework() {
             this.reset();
             this.shards = [];
@@ -127,8 +129,8 @@ void main(){
                 this.shards.push(new Shard(this));
         }
         Firework.prototype.reset = function () {
-            var angle = -Math.PI / 2 + (Math.random() - .5) * opts.fireworkAngleSpan
-                , vel = opts.baseFireworkVel + opts.addedFireworkVel * Math.random();
+            var angle = -Math.PI / 2 + (Math.random() - .5) * opts.fireworkAngleSpan,
+                vel = opts.baseFireworkVel + opts.addedFireworkVel * Math.random();
             this.mode = 0;
             this.vx = vel * Math.cos(angle);
             this.vy = vel * Math.sin(angle);
@@ -138,21 +140,22 @@ void main(){
         }
         Firework.prototype.step = function () {
             if (this.mode === 0) {
-                var ph = this.hue
-                    , px = this.x
-                    , py = this.y;
+                var ph = this.hue,
+                    px = this.x,
+                    py = this.y;
                 this.hue += opts.runHueAdder;
                 this.x += this.vx *= opts.xFriction;
                 this.y += this.vy += opts.gravity;
-                webgl.data.push(px, py, ph, opts.projectileAlpha * .2, this.x, this.y, this.hue, opts.projectileAlpha * .2);
+                webgl.data.push(px, py, ph, opts.projectileAlpha * .2, this.x, this.y, this.hue, opts
+                    .projectileAlpha * .2);
                 if (this.vy >= opts.lowVelBoundary) {
                     this.mode = 1;
                     this.shardAmount = opts.baseShardsParFirework + opts.addedShardsParFirework * Math.random() | 0;
-                    var baseAngle = Math.random() * tau
-                        , x = Math.cos(baseAngle)
-                        , y = Math.sin(baseAngle)
-                        , sin = sins[this.shardAmount]
-                        , cos = coss[this.shardAmount];
+                    var baseAngle = Math.random() * tau,
+                        x = Math.cos(baseAngle),
+                        y = Math.sin(baseAngle),
+                        sin = sins[this.shardAmount],
+                        cos = coss[this.shardAmount];
                     for (var i = 0; i < this.shardAmount; ++i) {
                         var vel = opts.baseShardVel + opts.addedShardVel * Math.random();
                         this.shards[i].reset(x * vel, y * vel)
@@ -176,6 +179,7 @@ void main(){
                     this.reset();
             }
         }
+
         function Shard(parent) {
             this.parent = parent;
         }
@@ -190,15 +194,17 @@ void main(){
         }
         Shard.prototype.step = function () {
             this.tick += .05;
-            var px = this.x
-                , py = this.y;
+            var px = this.x,
+                py = this.y;
             this.x += this.vx *= opts.xFriction;
             this.y += this.vy += opts.gravity;
             var proportion = 1 - (this.y - this.starty) / (h - this.starty);
-            webgl.data.push(px, py, this.parent.ph, opts.projectileAlpha / this.tick, this.x, this.y, this.parent.hue, opts.projectileAlpha / this.tick);
+            webgl.data.push(px, py, this.parent.ph, opts.projectileAlpha / this.tick, this.x, this.y, this.parent
+                .hue, opts.projectileAlpha / this.tick);
             if (this.y > h)
                 this.dead = true;
         }
+
         function anim() {
             window.requestAnimationFrame(anim)
             webgl.clear();
