--- a/js-router/index.html
+++ b/js-router/index.html
@@ -2,97 +2,74 @@
 <html>
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="keywords" content="javascript" />
-  <meta name="description" content="Javascript实现前端简单路由" />
-  <title>Javascript实现前端简单路由</title>
-  <link rel="stylesheet" href="https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css">
-  <style>
-    .text-right li {
-      padding: 10px
-    }
-
-    #result {
-      height: 200px;
-      line-height: 200px;
-      font-size: 2rem;
-      text-align: center;
-      color: #fff;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Javascript实现前端简单路由</title>
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css">
+    <style>
+        #app {
+            height: 200px;
+            line-height: 200px;
+            font-size: 2rem;
+            text-align: center;
+            color: #fff;
+        }
+    </style>
 </head>
 
 <body>
-  <div class="container">
-    <header>
-      <div class="row">
-        <div class="col-md-12 col-xs-12">
-          <h1 class="logo">Javascript实现前端简单路由</h1>
-        </div>
-        <div class="col-md-9 text-right"></div>
-      </div>
-    </header>
-    <div class="row main" style="min-height:500px">
-      <div class="col-md-12">
-        <div class="row" style="margin-top:30px">
-          <div class="col-md-3">
-            <ul class="text-right">
-              <li><a href="#/">首页</a></li>
-              <li><a href="#/product">产品</a></li>
-              <li><a href="#/server">服务</a></li>
-            </ul>
-          </div>
-          <div class="col-md-7">
-            <div id="result"></div>
-          </div>
-        </div>
-      </div>
+    <div class="container" style="margin-top:20px;">
+        <nav class="navbar navbar-default">
+            <div id="navbar" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <p class="navbar-text">JavaScript实现前端简单路由</p>
+                    <li><a href="#/">首页</a></li>
+                    <li><a href="#/product">产品</a></li>
+                    <li><a href="#/server">服务</a></li>
+                </ul>
+            </div>
+        </nav>
     </div>
+    <div class="container">
+        <div id="app"></div>
+    </div>
+    <script type="text/javascript">
+        function Router() {
+            this.routes = {};
+            this.curUrl = '';
 
-    <footer>
-      <p>Javascript实现前端简单路由</p>
-    </footer>
-  </div>
-  <script type="text/javascript">
-    function Router() {
-      this.routes = {};
-      this.curUrl = '';
+            this.route = function (path, callback) {
+                this.routes[path] = callback || function () {};
+            };
 
-      this.route = function (path, callback) {
-        this.routes[path] = callback || function () { };
-      };
+            this.refresh = function () {
+                this.curUrl = location.hash.slice(1) || '/';
+                this.routes[this.curUrl]();
+            };
 
-      this.refresh = function () {
-        this.curUrl = location.hash.slice(1) || '/';
-        this.routes[this.curUrl]();
-      };
+            this.init = function () {
+                window.addEventListener('load', this.refresh.bind(this), false);
+                window.addEventListener('hashchange', this.refresh.bind(this), false);
+            }
+        }
 
-      this.init = function () {
-        window.addEventListener('load', this.refresh.bind(this), false);
-        window.addEventListener('hashchange', this.refresh.bind(this), false);
-      }
-
-    }
-
-    var R = new Router();
-    R.init();
-    var res = document.getElementById('result');
-
-    R.route('/', function () {
-      res.style.background = 'blue';
-      res.innerHTML = '这是首页';
-    });
-    R.route('/product', function () {
-      res.style.background = 'orange';
-      res.innerHTML = '这是产品页';
-    });
-    R.route('/server', function () {
-      res.style.background = 'black';
-      res.innerHTML = '这是服务页';
-    });
-  </script>
+        var R = new Router();
+        R.init();
+        var res = document.getElementById('app');
+        R.route('/', function () {
+            res.style.background = 'blue';
+            res.innerHTML = '首页';
+        });
+        R.route('/product', function () {
+            res.style.background = 'orange';
+            res.innerHTML = '产品页产品页产品页产品页产品页产品页产品页产品页产品页产品页';
+        });
+        R.route('/server', function () {
+            res.style.background = '#ddd';
+            res.innerHTML = '这是服务页';
+        });
+    </script>
 </body>
 
 </html>
