--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </li> -->
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="https://github.com/doudoudzj/codes" target="_blank">GitHub</a></li>
+                    <li><a href="https://github.com/doudoudzj/html-demo" target="_blank">GitHub</a></li>
                 </ul>
             </div>
         </nav>
