--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     <footer class="footer">
         <div class="container">
             <p class="text-muted">
-                <span> 2019 by <a href="https://github.com/doudoudzj/codes" target="blank">doudoudzj</a></span>
+                <span>&copy; 2019 <a href="https://github.com/doudoudzj/html-demo" target="blank">doudoudzj</a></span>
             </p>
         </div>
     </footer>
