--- a/files/js-export-excel/index.html
+++ b/files/js-export-excel/index.html
@@ -51,7 +51,7 @@
     </table>
     <input type="button" id="export" value="导出" />
 
-    <script src="/assets/lib/jquery/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../../assets/lib/jquery/jquery.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="lib/tableExport.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="lib/base64.min.js" type="text/javascript" charset="utf-8"></script>
 </body>
