--- a/jquery/lottery_3x3/index.html
+++ b/jquery/lottery_3x3/index.html
@@ -114,7 +114,7 @@
         <span class="prize">其它</span>
     </div>
 
-    <script type="text/javascript" src="/assets/lib/jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="../../assets/lib/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="js/encryption-win.js"></script>
     <script type="text/javascript">
         $(function () {
