--- a/jquery/calc/index.html
+++ b/jquery/calc/index.html
@@ -76,10 +76,10 @@
 
     </div>
 
-    <script type="text/javascript" src="/assets/lib/jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="../../assets/lib/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="js/math.min.js"></script>
     <script type="text/javascript" src="js/popper.min.js"></script>
-    <script type="text/javascript" src="/assets/lib/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../../assets/lib/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 
 </body>
