--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     </div>
     <div class="container">
         <div class="row">
+            <!-- CSS -->
             <div class="col-md-3">
                 <div class="panel panel-default">
                     <div class="panel-heading">
@@ -75,6 +76,7 @@
                     </div>
                 </div>
             </div>
+            <!-- JavaScript -->
             <div class="col-md-3">
                 <div class="panel panel-default">
                     <div class="panel-heading">
@@ -97,6 +99,7 @@
                     </div>
                 </div>
             </div>
+            <!-- JQuery -->
             <div class="col-md-3">
                 <div class="panel panel-default">
                     <div class="panel-heading">
@@ -112,6 +115,7 @@
                     </div>
                 </div>
             </div>
+            <!-- VueJS -->
             <div class="col-md-3">
                 <div class="panel panel-default">
                     <div class="panel-heading">
@@ -128,6 +132,7 @@
                     </div>
                 </div>
             </div>
+            <!-- Canvas -->
             <div class="col-md-3">
                 <div class="panel panel-default">
                     <div class="panel-heading">
@@ -137,14 +142,34 @@
                     </div>
                     <div id="demo-canvas" class="panel-collapse collapse in">
                         <div class="panel-body">
+                            <p><a href="./canvas/example/index.html">Canvas 简单示例</a></p>
+                            <p><a href="./canvas/simple-drawing-container/index.html">Canvas 简单画板</a></p>
                             <p><a href="./canvas/electsign/index.html">Canvas 电子签名</a></p>
                             <p><a href="./canvas/round-clock/index.html">Canvas + VueJS 圆形时钟</a></p>
+                            <p><a href="./canvas/round-clock-2/index.html">Canvas 圆形时钟</a></p>
                             <p><a href="./canvas/background-animation/index.html">Canvas 背景动画</a></p>
                             <p><a href="./canvas/WebGL-high-performance-fireworks-blooming-animation/index.html">Canvas 烟花</a></p>
                         </div>
                     </div>
                 </div>
             </div>
+            <!-- Files -->
+            <div class="col-md-3">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a href="#demo-files" class="collapsed" role="button" data-toggle="collapse" aria-expanded="true" aria-controls="demo-files">Files</a>
+                        </h4>
+                    </div>
+                    <div id="demo-files" class="panel-collapse collapse in">
+                        <div class="panel-body">
+                            <p><a href="./files/simple-drawing-container/index.html">JS导出表格为 Excel 文件</a></p>
+                            <p><a href="./files/multiple-image-upload/index.html">可预览多个图片异步上传</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- 其他 -->
             <div class="col-md-3">
                 <div class="panel panel-default">
                     <div class="panel-heading">
@@ -156,6 +181,7 @@
                         <div class="panel-body">
                             <p><a href="./bootstrap/left+right.html">Bootstrap 左右两栏布局</a></p>
                             <p><a href="./files/js-export-excel/index.html">JS导出表格为excel,word,PDF,CSV的模板</a></p>
+                            
                         </div>
                     </div>
                 </div>
