add Canvas 宝马bmw图标

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
                             <p><a href="./canvas/round-clock-2/index.html">Canvas 圆形时钟</a></p>
                             <p><a href="./canvas/background-animation/index.html">Canvas 背景动画</a></p>
                             <p><a href="./canvas/WebGL-high-performance-fireworks-blooming-animation/index.html">Canvas 烟花</a></p>
+                            <p><a href="./canvas/canvas-bmw-icon/index.html">Canvas 宝马BMW图标</a></p>
                         </div>
                     </div>
                 </div>
