--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
                         <div class="panel-body">
                             <p><a href="./canvas/example/index.html">Canvas 简单示例</a></p>
                             <p><a href="./canvas/simple-drawing-container/index.html">Canvas 简单画板</a></p>
+                            <p><a href="./canvas/canvas-palette/index.html">Canvas 绘画板</a></p>
                             <p><a href="./canvas/electsign/index.html">Canvas 电子签名</a></p>
                             <p><a href="./canvas/round-clock/index.html">Canvas + VueJS 圆形时钟</a></p>
                             <p><a href="./canvas/round-clock-2/index.html">Canvas 圆形时钟</a></p>
