--- a/index.html
+++ b/index.html
@@ -151,6 +151,9 @@
                             <p><a href="./canvas/background-animation/index.html">Canvas 背景动画</a></p>
                             <p><a href="./canvas/WebGL-high-performance-fireworks-blooming-animation/index.html">Canvas 烟花</a></p>
                             <p><a href="./canvas/canvas-bmw-icon/index.html">Canvas 宝马BMW图标</a></p>
+                            <p><a href="./canvas/canvas-xiyangyang/index.html">Canvas 喜羊羊图像</a></p>
+                            <p><a href="./canvas/canvas-rainyday/index.html">Canvas 窗户玻璃雨滴逼真效果1</a></p>
+                            <p><a href="./canvas/canvas-rainyday/index2.html">Canvas 窗户玻璃雨滴逼真效果2</a></p>
                         </div>
                     </div>
                 </div>
