add SVG 世界地图地图可拖拽和缩放

--- a/index.html
+++ b/index.html
@@ -191,6 +191,21 @@
                     </div>
                 </div>
             </div>
+            <!-- SVG -->
+            <div class="col-md-3">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a href="#demo-svg" class="collapsed" role="button" data-toggle="collapse" aria-expanded="true" aria-controls="demo-svg">SVG</a>
+                        </h4>
+                    </div>
+                    <div id="demo-svg" class="panel-collapse collapse in">
+                        <div class="panel-body">
+                            <p><a href="./svg/html5-svg-world-map/index.html">SVG 世界地图地图可拖拽和缩放</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <p><a href="./html-contenteditable/index.html">html-contenteditable</a></p>
         <p><a href="./html-iframe-event/index.html">html-iframe-event</a></p>
